# COSMOS77-ex02

./: .env.example  .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: gatekeeper.json  logging_config.json  setup.json
docs/: ACCEPTANCE.md  PLAN.md  PRD.md  PRD_agent_base.md  PRD_debater_agents.md  PRD_extension_points.md  PRD_gatekeeper.md  PRD_ipc_protocol.md  PRD_judge_agent.md  PRD_logging.md  PRD_orchestrator.md  PRD_skills.md  PRD_terminal_menu.md  PRD_watchdog.md  PRD_web_search.md  TODO.md
docs/diagrams/: architecture.mmd  sequence.mmd
docs/prompts/: 000_phase0_bootstrap.md  001_phase1_docs.md  002_phase2_shared.md  003_phase3_runtime.md  004_phase4_agents.md  005_phase5_protocol.md  006_phase6_orchestrator.md  007_phase7_judge.md  008_phase8_menu.md  009_phase9_run.md  010_phase10_readme.md  011_phase11_qa.md  012_phase12_submit.md
scripts/: capture_screens.py  generate_cover_pdf.py
src/cosmos77_ex02/: __init__.py  constants.py
src/cosmos77_ex02/agents/: __init__.py  base.py  con.py  debater.py  enforcement.py  factory.py  judge.py  pro.py  prompts.py  verdict.py
src/cosmos77_ex02/cli/: __init__.py  actions.py  main.py  menu.py  render.py
src/cosmos77_ex02/orchestration/: __init__.py  cost.py  loop.py  orchestrator.py  process_agent.py  summary.py  transcript.py  watchdog.py
src/cosmos77_ex02/protocol/: __init__.py  citation.py  message.py  routing.py  serialize.py
src/cosmos77_ex02/runtime/: __init__.py  argv.py  claude_cli.py  parse.py
src/cosmos77_ex02/sdk/: __init__.py  sdk.py
src/cosmos77_ex02/shared/: __init__.py  config.py  fifo_handler.py  gatekeeper.py  logging_setup.py  version.py
src/cosmos77_ex02/skills/: skill_con.md  skill_judge.md  skill_pro.md
src/cosmos77_ex02/tools/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_debate_smoke.py
tests/unit/: __init__.py  test_constants.py
tests/unit/test_agents/: __init__.py  conftest.py  fakes.py  test_base.py  test_debaters.py  test_enforcement.py  test_factory.py  test_judge.py  test_prompts.py  test_skills.py  test_verdict.py
tests/unit/test_cli/: __init__.py  test_main.py  test_menu.py  test_render.py
tests/unit/test_orchestration/: __init__.py  helpers.py  test_cost.py  test_orchestrator.py  test_process_agent.py  test_summary.py  test_transcript.py  test_watchdog.py
tests/unit/test_protocol/: __init__.py  test_citation.py  test_message.py  test_routing.py  test_serialize.py
tests/unit/test_runtime/: __init__.py  test_runtime.py  test_runtime_parse.py
tests/unit/test_sdk/: __init__.py  (+2 more)
transcripts/: session_001.json  session_001_cost.json
(+8 files in other folders)
