[project]
name = "cosmos77-ex02"
version = "1.00"
description = "UOH-RL07 HW2: AI Agent Debate — Pro vs Con judged by a third agent, run as three real processes via the Claude CLI (vibe-coded with Claude Code)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Abdallah Khaldi", email = "abdallahkh12@icloud.com" },
    { name = "Tasneem Natour", email = "Natortasneem@gmail.com" },
]
keywords = ["ai-agents", "multi-agent", "debate", "claude-code", "vibe-coding", "uoh-rl07"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
]

[project.scripts]
cosmos77-debate = "cosmos77_ex02.cli.main:main"

[project.urls]
Homepage = "https://github.com/AbdallahKhaldi/COSMOS77-ex02"
Repository = "https://github.com/AbdallahKhaldi/COSMOS77-ex02"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos77_ex02"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["assets/", "logs/", "transcripts/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008", "N802", "N806", "SIM300"]
"scripts/**/*.py" = ["N802"]
"src/cosmos77_ex02/shared/gatekeeper.py" = ["N818"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cosmos77_ex02/cli/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/cosmos77_ex02 --cov-report=term-missing --cov-report=xml --strict-markers"
markers = [
    "live: hits the real `claude` CLI / network — excluded from CI, run locally only",
    "integration: end-to-end test exercising multiple components together",
    "slow: long-running test (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
]
